--- a/index.html
+++ b/index.html
@@ -14,8 +14,56 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="card">
+            <div class="card__score-board">
+                <h2 class="card__title"> Your Result</h2>
+                <div class="card__score-circle">
+                    <p class="user-score">76</p>
+                    <p class="top-score">of 100</p>
+                </div>
+                <h3 class="great">Great</h3>
+                <p class="card__description">You scored higher than 65% of the people who have taken these tests.</p>
+            </div>
+            <div class="card__score-summary">
+                <h2 class="Summary-title">Summary</h2>
+                <div class="score-summary__categories">
+                    <div class="categories-list">
+                        <div class="category reaction-bg">
+                            <div class="icon-title">
+                                <img src="assets/images/icon-reaction.svg">
+                                <h3>Reaction</h3>
+                            </div>
+                            <p>80/100</p>
+                        </div>
+                        <div class="category memory-bg">
+                            <div class="icon-title">
+                                <img src="assets/images/icon-memory.svg">
+                                <h3>Memory</h3>
+                            </div>
+                            <p>92/100</p>
+                        </div>
+                        <div class="category verbal-bg">
+                            <div class="icon-title">
+                                <img src="assets/images/icon-verbal.svg">
+                                <h3>Verbal</h3>
+                            </div>
+                            <p>80/100</p>
+                        </div>
+                        <div class="category visual-bg">
+                            <div class="icon-title">
+                                <img src="assets/images/icon-visual.svg">
+                                <h3>Visual</h3>
+                            </div>
+                            <p>80/100</p>
+                        </div>
+                        <btn class="button">Continue</btn>
+                    </div>
+                </div>
 
-
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
