style: added styling to card
This adds to the card appearance and adds the box shadow

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                     <p class="user-score">76</p>
                     <p class="top-score">of 100</p>
                 </div>
-                <h3 class="great">Great</h3>
-                <p class="card__description">You scored higher than 65% of the people who have taken these tests.</p>
+                <h3 class="card__score-category">Great</h3>
+                <p class="card__score-description">You scored higher than 65% of the people who have taken these tests.
+                </p>
             </div>
             <div class="card__score-summary">
                 <h2 class="Summary-title">Summary</h2>
